--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,12 +3,14 @@
     height: 400px;
     background-color: rgba(15, 67, 223, 0.637);
     border-radius: 10px;
+    box-shadow: 0px 0px 25px red;
 }
 
 
 .background-image {
-    padding-top: 50px;
+    margin-top: 50px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-radius: 10px;
+    box-shadow: 0px 0px 25px red;
 }
