--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,8 @@
 .company-name-container {
     text-align: center;
-    height: 400px;
+    max-width: 100%;
+    height: auto;
+    max-height: 400px;
     background-color: rgba(15, 67, 223, 0.637);
     border-radius: 10px;
     box-shadow: 0px 0px 25px red;
@@ -9,6 +11,10 @@
 
 .background-image {
     margin-top: 50px;
+    margin-bottom: 50px;
+    max-width: 100%;
+    height: auto;
+    max-height: 295px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-radius: 10px;
