--- a/src/style/FlagsPage.css
+++ b/src/style/FlagsPage.css
@@ -3,6 +3,7 @@
     margin-right: 30px;
     margin-bottom: 10px;
     margin-left: 30px;
+    background-size: cover;
     height: 400px;
     width: 700px;
     border-radius: 10px;
