--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -8,7 +8,7 @@
     background-color: rgba(15, 67, 223, 0.637);
 }
 
-.landing-link, .flags-link {
+.landing-link, .flags-link, .about-link {
     margin-right: 20px;
     font-size: 35px;
     font-weight: bold;
