--- a/src/style/About.css
+++ b/src/style/About.css
@@ -20,3 +20,9 @@
     font-size: 25px;
     margin-left: 300px;
 }
+
+
+.founder-craftsman-details {
+    font-size: 20px;
+    margin-left: 300px;
+}
