--- a/src/style/About.css
+++ b/src/style/About.css
@@ -21,14 +21,19 @@
     margin-left: 300px;
 }
 
+.workshop-photo {
+    margin: auto;
+}
+
 .founder-photo-holder {
     height: 300px;
     width: 250px;
     background-color: rgba(65, 105, 225, 0.692);
     border-radius: 5px;
+    margin-left: 330px;
 }
 
 .founder-craftsman-details {
     font-size: 20px;
-    margin-left: 300px;
+    margin-left: 330px;
 }
