--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -1,7 +1,7 @@
 .contact-holder {
-    margin-top: 200px;
-    margin-left: 835px;
-    margin-right: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
     text-align: center;
     width: 400px;
     height: 300px;
