--- a/src/style/ShowCard.css
+++ b/src/style/ShowCard.css
@@ -5,8 +5,9 @@
 }
 
 .show-photo {
-    height: 800px;
-    width: 1100px;
+    max-height: 800px;
+    height: auto;
+    width: 45%;
     border-radius: 7px;
     box-shadow: gray;
     transform: transform .2s;
