--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,9 +3,9 @@
     max-width: 100%;
     height: auto;
     max-height: 400px;
-    background-color: rgba(15, 67, 223, 0.637);
+    background-color: rgba(65, 105, 225, 0.8);
     border-radius: 10px;
-    box-shadow: 0px 0px 25px red;
+    box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.74);
 }
 
 
@@ -18,5 +18,5 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-radius: 10px;
-    box-shadow: 0px 0px 25px red;
+    box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.74);
 }
