--- a/src/style/Calendar.css
+++ b/src/style/Calendar.css
@@ -1,14 +1,17 @@
 .calendar-holder {
-    width: 1350px;
+    max-height: 900px;
+    height: auto;
+    width: 75%;
     margin-top: 55px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 55px;
     border-radius: 10px;
     text-align: center;
+    box-shadow: 0px 0px 20px rgba(65, 105, 225, 0.89);
 }
 
 #calendar-header {
-    color: rgba(255, 0, 0, 0.842);
+    color: rgba(255, 0, 0, 0.74);
     text-shadow: 2px 2px 5px rgba(65, 105, 225, 0.89);
 }
