working on shopping cart

--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -14,3 +14,9 @@
     font-weight: bold;
     color: rgb(247, 36, 36);
 }
+
+.cart-link {
+    color:  rgb(247, 36, 36);
+    padding-top: 8px;
+    font-size: 30px;
+}
