--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -34,7 +34,9 @@
 
 .single-nav-holder {
     margin-left: 162px;
-    margin-top: 262px;
+    margin-top: 202px;
+    font-size: 36px;
+    font-family: 'Overpass', sans-serif;;
     width: 400px;
     height: 204px;
 }
