--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -11,6 +11,7 @@
 
 #landing-company-name {
     text-align: left;
+    font-size: 42px;
     padding-left: 62px;
     padding-top: 31px;
     width: 280px;
