product preview on landing page working - mostly

--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -37,7 +37,7 @@
     margin-left: 162px;
     margin-top: 202px;
     font-size: 36px;
-    font-family: 'Overpass', sans-serif;;
+    font-family: 'Overpass', sans-serif;
     width: 400px;
     height: 204px;
 }
