--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -18,5 +18,15 @@
     height: 60px;
     background-color: #AD2328;
     color: white;
+    font-family: 'Overpass Mono', monospace;
+    align-self: center;
+}
+
+.custom-flag-btn {
+    height: 62px;
+    width: 225px;
+    background-color: #AD2328;
+    color: white;
+    font-family: 'Overpass Mono', monospace;
     align-self: center;
 }
