--- a/src/style/FlagDisplay.css
+++ b/src/style/FlagDisplay.css
@@ -1,7 +1,3 @@
-.flag-display-holder {
-    height: 669px;
-}
-
 .flag-display-list {
     display: flex;
     align-content: center;
@@ -14,7 +10,7 @@
 
 .landing-display-photo {
     width: 250px;
-    height: 250px;
+    /* height: 250px; */
 }
 
 .show-btn {
