--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: flex-end;
     height: 112px;
-    width: 1440px;
+    width: 100%;
     padding-right: 48px;
 }
 
