--- a/src/style/SizeOptionsDrop.css
+++ b/src/style/SizeOptionsDrop.css
@@ -1,6 +1,5 @@
 .options-container {
-    margin-bottom: 55px;
-    margin-top: 45px;
-    margin-left: 215px;
+    margin-left: 140px;
     width: 350px;
+    font-family: 'Overpass Mono', monospace;
 }
