--- a/src/style/ViewFlagPage.css
+++ b/src/style/ViewFlagPage.css
@@ -17,11 +17,11 @@
     /* margin-top: 100px; */
 }
 
-.flag-name {
+.view-name {
     margin-top: 200px;
 }
 
-.description-flavor-head, .description-flavor, .flag-name, .flag-flavor, .return-flavor-head, .return-flavor {
+.description-flavor-head, .description-flavor, .view-name, .flag-flavor, .return-flavor-head, .return-flavor {
     text-align: left;
     max-width: 453px;
     margin-left: 140px;
@@ -35,7 +35,7 @@
     margin-bottom: 7%;
 }
 
-.flag-name, .flag-flavor {
+.view-name, .flag-flavor {
     font-family: 'Overpass', sans-serif;
 }
 
