--- a/src/style/FlagCard.css
+++ b/src/style/FlagCard.css
@@ -29,4 +29,9 @@
     height: 35px;
     width: 120px;
     margin-left: 30px;
+    transition-duration: .5s;
+}
+
+.view-flag-btn:hover {
+    background-color: #018DDC;
 }
