--- a/src/style/CustomFormHolder.css
+++ b/src/style/CustomFormHolder.css
@@ -1,10 +1,12 @@
 .custom-link-holder {
-    height: 579px;
+    /* height: 579px; */
+    width: 100vw;
     background-image: url('../images/display4.jpg'), linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0));;
     background-repeat: no-repeat;
     background-position: 25% 25%;
     background-size: cover;
     text-align: center;
+    padding-bottom: 10vh;
 }
 
 .custom-link-header, .custom-link-header-small {
@@ -13,8 +15,9 @@
 }
 
 .custom-link-header {
-    padding-top: 208px;
+    padding-top: 10vh;
     font-size: 42px;
+    margin: 0;
 }
 
 .custom-link-header-small {
