--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -2,15 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 112px;
+    width: 100vw;
 }
 
 #landing-company-name {
     text-align: left;
+    margin: 0;
     font-size: 42px;
-    padding-left: 55px;
-    padding-top: 31px;
-    width: 280px;
+    padding-left: 1%;
+    width: 15%;
 }
 
 .nav-holder {
@@ -20,11 +20,10 @@
 .section-image-left {
     display: flex;
     margin-top: 40px;
-    height: 703px;
+    width: 100vw;
 }
 
 .img-holder {
-    height: auto;
     max-width: 50%;
 }
 
@@ -33,6 +32,6 @@
     margin-top: 202px;
     font-size: 36px;
     font-family: 'Overpass', sans-serif;
-    width: 400px;
-    height: 204px;
+    width: 19%;
+
 }
