--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -4,13 +4,18 @@
     justify-content: flex-end;
     height: 112px;
     width: 100%;
-    padding-right: 48px;
+    /* padding-right: 48px; */
 }
 
-.landing-link, .flags-link, .about-link, .contact-link {
+.landing-link, .flags-link, .contact-link {
     font-family: 'Overpass Mono', monospace;
     padding-right: 20px;
     font-size: 25px;
+}
+
+.about-link {
+    font-size: 25px;
+    font-family: 'Overpass Mono', monospace;
 }
 
 .view-flags-button {
