--- a/src/style/Calendar.css
+++ b/src/style/Calendar.css
@@ -1,10 +1,10 @@
 .in-person-holder {
     text-align: center;
-    width: 20%;
+    width: 20vw;
 }
 
 .calendar-header {
-    width: 20%;
+    width: 20vw;
 }
 
 .event-name, .calendar-header {
@@ -16,9 +16,9 @@
 }
 
 .calendar-holder {
-    margin-top: 10%;
-    margin-bottom: 10%;
-    width: 100vw;
+    margin-top: 20vh;
+    margin-bottom: 20vh;
+    max-width: 100vw;
     display: flex;
     justify-content: space-evenly;
 }
