--- a/src/style/CustomFormHolder.css
+++ b/src/style/CustomFormHolder.css
@@ -1,6 +1,6 @@
 .custom-link-holder {
     /* height: 579px; */
-    width: 100vw;
+    max-width: 100vw;
     background-image: url('../images/display4.jpg'), linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0));;
     background-repeat: no-repeat;
     background-position: 25% 25%;
