--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -9,8 +9,9 @@
     text-align: left;
     margin: 0;
     font-size: 42px;
-    padding-left: 1%;
-    width: 15%;
+    padding-left: 2vw;
+    padding-top: 1vh;
+    width: 15vw;
 }
 
 .nav-holder {
@@ -20,7 +21,7 @@
 .section-image-left {
     display: flex;
     margin-top: 40px;
-    width: 100vw;
+    max-width: 100vw;
 }
 
 .img-holder {
@@ -28,10 +29,9 @@
 }
 
 .single-nav-holder {
-    margin-left: 162px;
+    margin-left: 8.75vw;
     margin-top: 202px;
-    font-size: 36px;
+    font-size: 1.68vw;
     font-family: 'Overpass', sans-serif;
-    width: 19%;
-
+    width: 19vw;
 }
