landing page elements responsive

--- a/src/style/FlagDisplay.css
+++ b/src/style/FlagDisplay.css
@@ -23,7 +23,7 @@
 
 .landing-flag-name {
     font-family: 'Overpass', sans-serif;
-    font-size: 36px;
+    font-size: 1.68vw;
 }
 
 .landing-flag-display {
