--- a/src/style/FlagCard.css
+++ b/src/style/FlagCard.css
@@ -19,6 +19,7 @@
 
 .flag-name {
     margin-left: 30px;
+    font-size: 1.3vw;
     font-family: 'Overpass', sans-serif;
 }
 
@@ -26,9 +27,10 @@
     background-color: #0073B4;
     border: none;
     color: white;
-    height: 35px;
-    width: 120px;
-    margin-left: 30px;
+    /* font-size: 1.3vw; */
+    height: 3vh;
+    width: 5.6vw;
+    margin-left: 1.5vw;
     transition-duration: .5s;
 }
 
