--- a/src/style/SizeOptionsDrop.css
+++ b/src/style/SizeOptionsDrop.css
@@ -1,5 +1,5 @@
 .options-container {
-    margin-left: 140px;
-    width: 350px;
+    margin-left: 6.5vw;
+    width: 16.5vw;
     font-family: 'Overpass Mono', monospace;
 }
