--- a/src/style/ViewFlagPage.css
+++ b/src/style/ViewFlagPage.css
@@ -1,30 +1,31 @@
 .flex-holder {
-    margin-top: 40px;
+    margin-top: 4vh;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+    width: 100vw;
 }
 
 .flag-img {
-    width: 544px;
-    height: 280px;
-    margin-top: 200px;
+    width: 25vw;
+    height: 27vh;
+    margin-top: 20vh;
+    margin-left: 10vw;
 }
 
 .description-holder {
     background-color: #F1F1F1;
-    width: 720px;
-    height: 933px;
-    /* margin-top: 100px; */
+    width: 50vw;
+    margin-left: 10vw;
 }
 
 .view-name {
-    margin-top: 200px;
+    margin-top: 19vh;
 }
 
 .description-flavor-head, .description-flavor, .view-name, .flag-flavor, .return-flavor-head, .return-flavor {
-    text-align: left;
-    max-width: 453px;
-    margin-left: 140px;
+    /* text-align: left; */
+    width: 20vw;
+    margin-left: 6.5vw;
 }
 
 .description-flavor-head, .description-flavor, .return-flavor-head, .return-flavor {
@@ -40,5 +41,5 @@
 }
 
 .flag-flavor {
-    margin-bottom: 73px;
+    margin-bottom: 7vh;
 }
