--- a/src/style/FlagCard.css
+++ b/src/style/FlagCard.css
@@ -7,12 +7,11 @@
 }
 
 .flag-page-photos {
-    margin-top: 45px;
-    margin-right: 30px;
-    margin-bottom: 10px;
-    margin-left: 30px;
+    margin-top: 4.5vh;
+    margin-bottom: 1vh;
+    margin-left: 1.5vw;
     background-size: cover;
-    max-height: 150px;
+    max-height: 14.5vh;
     height: auto;
     max-width: 70%;
 }
@@ -37,4 +36,23 @@
 .view-flag-btn:hover {
     background-color: #018DDC;
     border: none;
+}
+
+@media screen and (max-width: 600px) {
+    .flag-page-photos {
+        max-width: 100vw;
+    }
+
+    .view-flag-btn {
+        height: 5vh;
+        width: 20vw;
+        margin-top: -5vh;
+        margin-bottom: 5vh;
+    }
+
+    .flag-name {
+        font-size: 4vw;
+        margin-left: 1vw;
+    }
+
 }
