--- a/src/style/CustomForm.css
+++ b/src/style/CustomForm.css
@@ -13,3 +13,19 @@
     padding-top: 1vh;
     width: 15vw;
 }
+
+.custom-flag-form {
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F1F1F1;
+}
+
+input {
+    height: 5vh;
+    width: 25vw;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+}
