--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -5,6 +5,22 @@
     width: 96.9vw;
 }
 
+.landing-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F1F1F1;
+}
+
+#landing-company-name-footer {
+    text-align: left;
+    margin: 0;
+    font-size: 2vw;
+    padding-left: 2vw;
+    padding-bottom: 1vh;
+    width: 15vw;
+}
+
 #landing-company-name {
     text-align: left;
     margin: 0;
