--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -6,6 +6,22 @@
     max-width: 100vw;
 }
 
+.landing-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 96.9vw;
+}
+
+#landing-company-name {
+    text-align: left;
+    margin: 0;
+    font-size: 2vw;
+    padding-left: 2vw;
+    padding-top: 1vh;
+    width: 15vw;
+}
+
 .landing-link, .flags-link, .contact-link {
     font-family: 'Overpass Mono', monospace;
     padding-right: 1vw;
