working on order form, othr qol

--- a/src/style/CustomForm.css
+++ b/src/style/CustomForm.css
@@ -53,3 +53,9 @@ input {
     background-color: #D22F35;
     border: none;
 }
+
+.order-here {
+    font-family: 'Overpass', sans-serif;
+    font-style: italic;
+    font-weight: 350;
+}
